<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/resettxt"
            android:layout_width="218dp"
            android:layout_height="55dp"
            android:id="@+id/resetbtn" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:textSize="24sp"/>
    <ImageView
            android:layout_width="295dp"
            android:layout_height="220dp" app:srcCompat="@drawable/money_slot_machine"
            android:id="@+id/slotimg" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.141"
    />
    <TextView
            android:text="@string/titletxt1"
            android:layout_width="442dp"
            android:layout_height="62dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/titletxt" android:textSize="48sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/slotimg" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/temotitxt1"
            android:layout_width="222dp"
            android:layout_height="48dp"
            android:id="@+id/temotitxt" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/titletxt"/>
    <TextView
            android:text="@string/temotikoin"
            android:layout_width="174dp"
            android:layout_height="64dp"
            android:id="@+id/temotikointxt" android:textSize="48sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temotitxt" android:layout_marginStart="108dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="108dp"/>
    <TextView
            android:text="@string/kakekintxt1"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:id="@+id/kakekintxt" android:textSize="36sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/temotikointxt" android:layout_marginStart="108dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="108dp"/>
    <TextView
            android:text="@string/kakekin"
            android:layout_width="144dp"
            android:layout_height="69dp"
            android:id="@+id/kakekinncoin" android:textSize="48sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/kakekintxt" android:layout_marginStart="104dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="104dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/startbtn"
            app:layout_constraintVertical_bias="0.068"/>
    <Button
            android:text="@string/kakekinnupbtn"
            android:layout_width="202dp"
            android:layout_height="89dp"
            android:id="@+id/kakeinnupbtn" android:textSize="30sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginRight="40dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/titletxt"/>
    <Button
            android:text="@string/kakekinndown"
            android:layout_width="202dp"
            android:layout_height="89dp"
            android:id="@+id/kakekindownbtn" android:textSize="30sp" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="40dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/kakeinnupbtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/startbtn" app:layout_constraintVertical_bias="0.129"/>
    <Button
            android:text="@string/start"
            android:layout_width="471dp"
            android:layout_height="79dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/startbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletxt" app:layout_constraintVertical_bias="0.98"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.503"/>
</android.support.constraint.ConstraintLayout>