<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity">

    <TextView
            android:text="@string/temotitxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/temotitxt2" android:textSize="30sp"
            android:layout_marginTop="400dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"/>
    <TextView
            android:text="@string/temotikoin"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:id="@+id/temotikointxt2" android:textSize="48sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/temotitxt2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="164dp" android:layout_marginStart="164dp"/>
    <TextView
            android:text="@string/kakekintxt1"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/kakekintxt2" android:textSize="36sp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/temotikointxt2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="140dp" android:layout_marginStart="140dp"/>
    <TextView
            android:text="@string/kakekin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kakekinncoin2" android:textSize="48sp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/kakekintxt2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="216dp" android:layout_marginStart="216dp"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp" app:srcCompat="@drawable/question"
            android:id="@+id/slotimg1"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="162dp"
            android:layout_height="160dp" app:srcCompat="@drawable/question"
            android:id="@+id/slotimg2"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/slotimg1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/slotimg3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp" app:srcCompat="@drawable/question"
            android:id="@+id/slotimg3"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/returntxt"
            android:layout_width="202dp"
            android:layout_height="86dp"
            android:id="@+id/returnbtn" android:textSize="36sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt1" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" android:textSize="48sp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/slotimg1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/temotitxt2" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/stoptxt"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:textSize="18sp"
            android:id="@+id/stopbtn1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/slotimg1"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/stopbtn2"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.388"/>
    <Button
            android:text="@string/stoptxt"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:textSize="18sp"
            android:id="@+id/stopbtn2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/slotimg2" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toStartOf="@+id/stopbtn3" android:layout_marginRight="32dp"/>
    <Button
            android:text="@string/stoptxt"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:textSize="18sp"
            android:id="@+id/stopbtn3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/slotimg3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
</android.support.constraint.ConstraintLayout>